force-app/main/default/objects/Expense__c/Expense__c.object-meta.xml
<CustomObject>
    <description>Represents an expense record that aggregates financial transactions typically incurred by employees or departments within an organization. This object is pivotal for managing and tracking business expenditures, from submission to approval. It includes fields for merchant details, transaction dates, total amounts, and the status of the expense.</description>
    <label>Expense</label>
    <nameField>
        <displayFormat>EXP-{00000000}</displayFormat>
        <label>Expense Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Expenses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>