force-app/main/default/objects/Expense__c/fields/Error_Message__c.field-meta.xml
<CustomField>
    <fullName>Error_Message__c</fullName>
    <description>Error message when Document AI processing fails</description>
    <label>Error Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField> 