force-app/main/default/objects/Expense__c/fields/Merchant_Name__c.field-meta.xml
<CustomField>
    <fullName>Merchant_Name__c</fullName>
    <description>The name of the merchant or vendor from whom the goods or services were purchased. This field is crucial for categorizing and auditing expenses.</description>
    <inlineHelpText>The name of the merchant or vendor from whom the goods or services were purchased. This field is crucial for categorizing and auditing expenses.</inlineHelpText>
    <label>Merchant Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>