force-app/main/default/objects/Expense__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>The current status of the Expense record, which can include values such as &apos;Draft&apos;, &apos;Pending&apos;, &apos;Approved&apos;, &apos;Rejected&apos;. This field helps in managing the approval process and workflow of the expense lifecycle.</description>
    <inlineHelpText>The current status of the Expense record, which can include values such as &apos;Draft&apos;, &apos;Pending&apos;, &apos;Approved&apos;, &apos;Rejected&apos;. This field helps in managing the approval process and workflow of the expense lifecycle.</inlineHelpText>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
                <default>true</default>
                <label>Draft</label>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>