force-app/main/default/objects/Expense__c/fields/Total_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount__c</fullName>
    <description>The total amount rolled up from all associated Expense Line Items. This field summarizes the total expenditure represented by the receipt.</description>
    <inlineHelpText>The total amount rolled up from all associated Expense Line Items. This field summarizes the total expenditure represented by the receipt.</inlineHelpText>
    <label>Total Amount</label>
    <summarizedField>Expense_Line_Item__c.Line_Amount__c</summarizedField>
    <summaryForeignKey>Expense_Line_Item__c.Expense__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>