force-app/main/default/objects/Expense__c/fields/Transaction_Date__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Date__c</fullName>
    <description>The date when the expense transaction occurred. This field helps in tracking and reporting expenses over time.</description>
    <inlineHelpText>The date when the expense transaction occurred. This field helps in tracking and reporting expenses over time.</inlineHelpText>
    <label>Transaction Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>